@@ -1,6 +1,9 @@
 Changes between 2.0.2 and 2.0.3.dev
 ----------------------------------------------
 
+- don't require zlib (and other libs) for genscript plugin without
+  --genscript actually being used.
+
 - speed up skips (by not doing a full traceback represenation
   internally)
 
